--- a/app/index.html
+++ b/app/index.html
@@ -27,60 +27,13 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div class="wrapper">
-      <input type="checkbox" id="toggle-nav" class="nav-checkbox">
-      <header class="top">
-        <h1><a href="#">Mobile friendly flexbox layout</a></h1>
-      </header>
-
-      <!-- <div class="height-test"></div> -->
-
-      <nav class="flex-nav">
-        <label for="toggle-nav" class="toggle-nav">☰ Menu</label>
-        <ul class="nav-menu">
-          <li><a href="#">One Thing</a></li>
-          <li><a href="#">Another Thing</a></li>
-          <li><a href="#">And Another One</a></li>
-          <li><a href="#">DJ Khaled</a></li>
-          <li class="social">
-            <a href="//twitter.com/stefanodevuono">
-              <i class="fa fa-twitter"></i>
-            </a>
-          </li>
-          <li class="social">
-            <a href="mailto:io@stefanodevuono.com/">
-              <i class="fa fa-envelope"></i>
-            </a>
-          </li>
-          <li class="social">
-            <a href="//github.com/stefanodevuono">
-              <i class="fa fa-github"></i>
-            </a>
-          </li>
-        </ul>
-      </nav>
-
-      <section class="hero">
-        <img src="//lorempixel.com/1000/600/abstract" alt="">
-      </section>
-
-      <section class="details">
-        <p>A simple video course to help you master FlexBox.</p>
-        <p>Sign up today to grab all the videos and exercises!</p>
-      </section>
-
-      <section class="signup">
-        <form action="" class="signup">
-          <input type="text" placeholder="Your Name">
-          <input type="email" placeholder="Email Address">
-          <input type="submit" value="Sign me up!">
-        </form>
-      </section>
-
-      <footer>
-        <p>&copy; Stefano De Vuono</p>
-      </footer>
-
+    <div class="container">
+      <div class="box box1">one 😎</div>
+      <div class="box box2">two 🍕</div>
+      <div class="box box3">three 🍟</div>
+      <div class="box box4">four 👍</div>
+      <div class="box box5">five 👀</div>
+      <div class="box box6">six 💩</div>
     </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
